--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: home
           var all = [ {{ site.myblog.coverimgs }} ];
           return all[Math.floor((Math.random()*all.length))];
         }
-        $('div.aside').css('background-image', geturl());
+        // $('div.aside').css('background-image', geturl());
         $('div#avatar').transition({ scale: 2.5 }).transition({ opacity: 1, scale: 1 }, 800, 'ease');
       });
     </script>
