--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: home
         {% for post in site.posts %}
             <li><div class="title-date">{{ post.date | date:"%Y-%m-%d" }}</div>
                 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-                <div class="title-desc">{{ post.excerpt }}</div>
+                <div class="title-desc">{{ post.description }}</div>
             </li>
         {% endfor %}
         </ul>
