--- a/index.html
+++ b/index.html
@@ -29,19 +29,10 @@ layout: home
         $('div#avatar').transition({ scale: 2.5 }).transition({ opacity: 1, scale: 1 }, 800, 'ease');
       });
     </script>
-    <div class="aside">
+    <div class="aside" style="background-image: url(http://attach.bbs.miui.com/forum/201206/06/2226336d6nxnnfxldyxhed.jpg);">
       <div id="avatar" class="avatar circle" style="width: 150px; height: 150px; position: absolute; right: -75px; top: 75px; opacity: 0;">
         <div class="center circle" style="margin-top: 4px; height: 142px; width: 142px; background-image: url('images/2.jpg')"></div>
       </div> 
-<!-- 
-        {% for category in site.categories %}
-        <h2>{{ category | first }}</h2>
-         <ul class="arc-list">
-            {% for post in category.last %}
-                <li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %}
-        </ul>
-        {% endfor %} -->
 
     </div>
 </div>
