--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: home
 <div class="index-content blog">
     <div class="section">
         <div class="cate-bar">
-          <a href="{{ site.myblog.linkedin }}"><i class="icon-linkedin-sign icon-large"></i><span> Linkedin</span></a>
-          <a href="{{ site.myblog.github }}"><i class="icon-github icon-large"></i><span> Github</span></a>
+          <a href="{{ site.myblog.linkedin }}" target="_blank"><i class="icon-linkedin-sign icon-large"></i><span> Linkedin</span></a>
+          <a href="{{ site.myblog.github }}" target="_blank"><i class="icon-github icon-large"></i><span> Github</span></a>
           <!-- <a class="hide-phone" href="{{ site.myblog.email }}"><i class="icon-envelope icon-large"></i><span> Mail</span></a> -->
           <!-- <a href="http://litaotao.github.io/resume" target="_blank"><i class="icon-edit-sign icon-large"></i><span> About</span></a> -->
         </div>
